modified excel image

--- a/report-web/src/main/webapp/WEB-INF/resources/default/css/layout.css
+++ b/report-web/src/main/webapp/WEB-INF/resources/default/css/layout.css
@@ -337,7 +337,7 @@ ul.accordion li.bg1 {
 
 ul.accordion li.bg2 {
 	background-image:
-		url(../images/excelreport2.png);
+		url(../images/excelreport.png);
 	background-position: 5px 70px;
 	background-color: #eceef9;
 }
