Sample implementation of on demand report generation based on report template
- added sample implememtation for on demand report generation
- temporary put under "dashboard" feature, to be refactor to proper
feature name.

--- a/report-web/src/main/webapp/WEB-INF/templates/menu_bar.xhtml
+++ b/report-web/src/main/webapp/WEB-INF/templates/menu_bar.xhtml
@@ -21,7 +21,7 @@
 		<p:menubar id="main-menu" styleClass="main-menu" autoDisplay="true">
 			<p:menuitem value="Home" icon="fa fa-home" url="/views/home.xhtml" />
 			<p:submenu label="Dashboard" icon="fa fa-dashboard">
-				<p:menuitem value="Browse Dashboards" icon="fa fa-search"/>
+				<p:menuitem value="Browse Dashboards" url="/views/dashboard/browse_dashboards.xhtml" icon="fa fa-search"/>
 				<p:separator />
 				<p:menuitem value="Manage Dashboards" icon="fa fa-wrench"/>
 				<p:menuitem value="New" icon="fa fa-plus"/>
