--- a/report-web/src/main/webapp/WEB-INF/templates/menu_bar.xhtml
+++ b/report-web/src/main/webapp/WEB-INF/templates/menu_bar.xhtml
@@ -33,7 +33,8 @@
 				<p:submenu label="New" icon="fa fa-plus">
 					<p:menuitem value="Chart Report" icon="fa fa-bar-chart"/>
 					<p:menuitem value="CrossTab Report" icon="fa fa-list-alt"/>
-					<p:menuitem value="Report Document" icon="fa fa-clipboard"/>
+					<p:menuitem value="Report Document" icon="fa fa-file"/>
+					<p:menuitem value="Report Template" action="#{reportTemplate.createNewReportTemplate}" icon="fa fa-clipboard"/>
 				</p:submenu>
 			</p:submenu>
 			<p:submenu label="Model" icon="fa fa-table">
