--- a/report-web/src/main/webapp/WEB-INF/resources/default/css/style.css
+++ b/report-web/src/main/webapp/WEB-INF/resources/default/css/style.css
@@ -3,15 +3,15 @@ textarea {
 }
 
 body {
-	font-size:20pt;
+	font-size: 20pt;
 }
 
 .font-size-normal {
-	font-size:10pt;
+	font-size: 10pt;
 }
-    
+
 .ui-widget .ui-widget-content {
-/* 	border: none !important; */
+	/* 	border: none !important; */
 	padding: 0 !important;
 	margin: 0 !important;
 }
@@ -24,22 +24,22 @@ body {
 
 /* for layout2 */
 .ui-layout-north {
-    z-index:20 !important;
-    overflow:visible !important;
+	z-index: 20 !important;
+	overflow: visible !important;
 }
-    
+
 .north-layout {
 	border-top: none !important;
 	border-left: none !important;
 	border-right: none !important;
 	padding: 0 !important;
 	margin: 0 !important;
-	margin-bottom: 50px!important;
+	margin-bottom: 50px !important;
 	vertical-align: middle;
-/* 	overflow-y: hidden; */
-/* 	overflow-x: hidden; */
-/* 	z-index: -1; */
-/* 	height: 100px; */
+	/* 	overflow-y: hidden; */
+	/* 	overflow-x: hidden; */
+	/* 	z-index: -1; */
+	/* 	height: 100px; */
 }
 
 .north-layout .north-panel {
@@ -47,9 +47,9 @@ body {
 	padding: 0 !important;
 	margin: 0 !important;
 	vertical-align: middle;
-/* 	overflow-y: hidden; layout1 */
-/* 	overflow-x: hidden; layout1 */
-/* 	height: 50%; layout1 */
+	/* 	overflow-y: hidden; layout1 */
+	/* 	overflow-x: hidden; layout1 */
+	/* 	height: 50%; layout1 */
 }
 
 .north-layout .north-panel .ui-widget-header {
@@ -80,26 +80,25 @@ body {
 
 .north-layout .ui-layout-unit-content {
 	padding: 0 !important;
-	z-index:20 !important;
-	overflow:visible !important;
-/* 	overflow: hidden!important;  layout1 */
+	z-index: 20 !important;
+	overflow: visible !important;
+	/* 	overflow: hidden!important;  layout1 */
 }
 
 /* added for layout2 start */
 .north-layout .main-menu {
 	background: none;
-	border:none!important;
+	border: none !important;
 	float: right;
-	margin-top: -35px!important;
-	margin-right: 20px!important;
-	overflow: visible!important;
+	margin-top: -35px !important;
+	margin-right: 20px !important;
+	overflow: visible !important;
 }
 
 .north-layout .main-menu .ui-widget {
-	font-size: 10pt!important;
+	font-size: 10pt !important;
 }
 /* added for layout2 end */
-
 .north-layout .main-menu .ui-widget-header {
 	background: none;
 }
@@ -134,48 +133,50 @@ body {
 	padding: 0 !important;
 	margin: 0 !important;
 	text-align: center;
-	border-width:0;
+	border-width: 0;
 }
 
 .center-layout {
-/* 	top: 169x!important; */
-/* 	padding-top: -100px; */
-/* 	border-width:0; */
-	border: none!important; /* layout2 */
-/* 	border: 1px solid blue!important; */
-/* 	border-bottom: none; */
+	/* 	top: 169x!important; */
+	/* 	padding-top: -100px; */
+	/* 	border-width:0; */
+	border: none !important; /* layout2 */
+	/* 	border: 1px solid blue!important; */
+	/* 	border-bottom: none; */
 }
 
 .center-layout .ui-widget-content {
-/* 	border: none!important; */
+	/* 	border: none!important; */
+	
 }
 
 .center-layout .center-tabview-details .ui-tabs-nav {
-/* 	border-bottom: 1px solid #BED6F8!important; */
+	/* 	border-bottom: 1px solid #BED6F8!important; */
+	
 }
 
 .center-layout .center-tabview-details .ui-tabs-nav li {
 	border-top-right-radius: 10px;
 	border-top-left-radius: 10px;
-	border-bottom: 1px solid #BED6F8!important;
+	border-bottom: 1px solid #BED6F8 !important;
 }
 
 .center-north-layout {
-	text-align:center;
-	border: none!important;
-	border-width:0;
+	text-align: center;
+	border: none !important;
+	border-width: 0;
 }
 
-.center-north-layout .ui-widget-content  {
-	border: none!important;
-	border-width:0;
+.center-north-layout .ui-widget-content {
+	border: none !important;
+	border-width: 0;
 	overflow: hidden;
 }
 
 .center-west-layout {
-/* 	border: none; */
-/* 	border-right: 1px solid #BED6F8!important; */
-/* 	border-width:0; */
+	/* 	border: none; */
+	/* 	border-right: 1px solid #BED6F8!important; */
+	/* 	border-width:0; */
 	height: 100%;
 }
 
@@ -184,7 +185,8 @@ body {
 	width: 100%;
 	border-width: 0;
 	font-size: 10pt;
-	margin-top: 15px;}
+	margin-top: 15px;
+}
 
 .center-west-layout .model-tree .ui-icon.fa {
 	text-indent: 0px;
@@ -196,141 +198,162 @@ body {
 	color: #4F6B92;
 }
 /* layout2 west side tree end */
-
 .center-west-layout .search-panel-grid {
-	margin-top:5px!important;
+	margin-top: 5px !important;
 }
 
 .center-west-layout .search-panel-grid .advanced-search-button {
-	float:right;
-	width:25px;
-	height:25px;
+	float: right;
+	width: 25px;
+	height: 25px;
 	margin-left: -10px;
 }
 
 .center-west-layout .search-panel-grid .ui-widget-content,
- 	.center-west-layout .search-panel-grid  .ui-panelgrid-cell {
-	border: none!important;
-	border-width:0;
+	.center-west-layout .search-panel-grid  .ui-panelgrid-cell {
+	border: none !important;
+	border-width: 0;
 }
 
 .context-menu-panel .ui-icon.fa {
 	text-indent: 0px;
 	background-image: none;
 	font-size: 9pt;
-	margin-top:1px;
-	color:#008B8B;
+	margin-top: 1px;
+	color: #008B8B;
 }
 
 .search-popup-panel {
-	margin:10px;
+	margin: 10px;
 }
 
-.search-popup-panel .ui-widget-content, .search-popup-panel .ui-panelgrid-cell {
-	border: none!important;
-	border-width:0;
-	font-size:10pt;
+.search-popup-panel .ui-widget-content, .search-popup-panel .ui-panelgrid-cell
+	{
+	border: none !important;
+	border-width: 0;
+	font-size: 10pt;
 }
 
 .center-center-layout {
-	border-width:0!important;
-	border: none!important;
+	border-width: 0 !important;
+	border: none !important;
 }
 
 .center-center-layout .center-tabview-details {
-	border: none!important;
+	border: none !important;
 	height: 570px;
-	border-width:0!important;
+	border-width: 0 !important;
 }
 
 .center-center-layout .center-tabview-details .ui-widget-header {
-	background: none!important;
+	background: none !important;
+}
+
+.center-center-layout .center-tabview-details-templates {
+	border: none !important; 
+	height: 400px;
+	border-width: 0 !important;
+}
+
+.center-layout .center-tabview-details-templates .ui-tabs-nav li {
+	border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-bottom: 1px solid #BED6F8 !important; 
+}
+
+.center-center-layout .center-tabview-details-templates .ui-widget-header
+	{
+	background: none !important;
+	border-bottom: 1px solid #BED6F8 !important;
 }
 
 .center-center-layout .container-grid {
-	width:100%;
+	width: 100%;
 }
 
 .center-center-layout .container-grid .model-attribute-table td {
-	border: 1px solid #BED6F8!important;
+	border: 1px solid #BED6F8 !important;
 }
 
-.center-center-layout .container-grid .ui-widget-content, 
+.center-center-layout .container-grid .ui-widget-content,
 	.center-center-layout .container-grid .ui-panelgrid-cell {
-	border: none!important;
-	border-width:0!important;
+	border: none !important;
+	border-width: 0 !important;
 }
 
 .center-center-layout .container-grid .view-container-grid {
-	width:100%;
+	width: 100%;
 	font-size: 9pt;
-	height:100%;
+	height: 100%;
 	border: 1px solid #BED6F8 !important;
-	padding-bottom: 40px!important;
+	padding-bottom: 40px !important;
 }
 
-.center-center-layout .container-grid .view-container-grid .view-model-grid {
-/* 	border: none!important; */
-/* 	border-width:0; */
-	margin-top:20px;
-	table-layout: fixed!important;
+.center-center-layout .container-grid .view-container-grid .view-model-grid
+	{
+	/* 	border: none!important; */
+	/* 	border-width:0; */
+	margin-top: 20px;
+	table-layout: fixed !important;
 }
 
-.center-center-layout .container-grid .view-container-grid .view-model-grid .ui-widget-content, 
-	.center-center-layout .container-grid .view-container-grid .view-model-grid .ui-panelgrid-cell {
-/* 	border: none!important; */
-/* 	border-width:0; */
-	width:170px;
+.center-center-layout .container-grid .view-container-grid .view-model-grid .ui-widget-content,
+	.center-center-layout .container-grid .view-container-grid .view-model-grid .ui-panelgrid-cell
+	{
+	/* 	border: none!important; */
+	/* 	border-width:0; */
+	width: 170px;
 }
 
 .view-model-datatable {
 	border: 1px solid #BED6F8 !important;
-	width:99%;
-	margin-top:10px;
-	table-layout: fixed!important;
-	word-wrap: break-word!important;
-/* 	border-width:0 !important; */
+	width: 99%;
+	margin-top: 10px;
+	table-layout: fixed !important;
+	word-wrap: break-word !important;
+	/* 	border-width:0 !important; */
 }
 
 .view-model-textarea {
-	width:820px;
-	height:400px;
-	margin:10px;
+	width: 820px;
+	height: 400px;
+	margin: 10px;
 	overflow-y: scroll;
-	font-size:10pt!important;
+	font-size: 10pt !important;
 }
 
 .view-model-container-grid-separator {
-	background: none!important;
-	border: 1px solid #5F9EA0!important;
+	background: none !important;
+	border: 1px solid #5F9EA0 !important;
 	margin-bottom: 15px;
 }
 
-.view-model-datatable .ui-widget-content, 
-	.view-model-table .ui-panelgrid-cell {
-/* 	border: none!important; */
-/* 	border-width:0; */
+.view-model-datatable .ui-widget-content, .view-model-table .ui-panelgrid-cell
+	{
+	/* 	border: none!important; */
+	/* 	border-width:0; */
+	
 }
 
-.view-model-report-datalist .ui-widget-content, 
+.view-model-report-datalist .ui-widget-content,
 	.view-model-report-datalist .ui-panelgrid-cell {
-	border: none!important;
-	border-width:0;
+	border: none !important;
+	border-width: 0;
 }
 
-.create-model-main-panel .ui-widget-content, 
-	.create-model-main-panel .ui-panelgrid-cell {
-	border: none!important;
-	border-width:0;
+.create-model-main-panel .ui-widget-content, .create-model-main-panel .ui-panelgrid-cell
+	{
+	border: none !important;
+	border-width: 0;
 }
 
 .create-model-main-panel {
-	height:500px;
+	height: 500px;
 }
 
 .create-model-datasource-panel {
 	margin-left: 20px;
-	border: 2px solid #5F9EA0; 
+	border: 2px solid #5F9EA0;
 	padding: 5px;
 	width: 38em;
 	background-color: #F5F5F5;
@@ -342,64 +365,77 @@ body {
 }
 
 .createmodel-label-text {
-	font-size:10pt!important;
-	font-weight:bolder;
+	font-size: 10pt !important;
+	font-weight: bolder;
 }
 
 .createmodel-value-text {
-	font-size:10pt!important;
-	margin-left:5px;
+	font-size: 10pt !important;
+	margin-left: 5px;
 }
 
 .createmodel-dstab-title {
-	font-size:10pt;
-	border-top-left-radius:.5em;
-	border-top-right-radius:.5em;
+	font-size: 10pt;
+	border-top-left-radius: .5em;
+	border-top-right-radius: .5em;
 }
 
 .create-model-description {
-	font-size:10pt!important;
-	color:blue;
+	font-size: 10pt !important;
+	color: blue;
 }
 
 .create-model-data-table {
 	border: 1px solid #BED6F8 !important;
-	word-wrap: break-word!important;
+	word-wrap: break-word !important;
 }
 
 .create-model-data-table td {
-	word-wrap: break-word!important;
+	word-wrap: break-word !important;
 	border: 1px solid #BED6F8 !important;
 }
 
-.create-model-data-table .ui-widget-content, 
-	.create-model-data-table .ui-panelgrid-cell {
-	border: none!important;
-	border-width:0!important;
-	word-wrap: break-word!important;
+.create-model-data-table .ui-widget-content, .create-model-data-table .ui-panelgrid-cell
+	{
+	border: none !important;
+	border-width: 0 !important;
+	word-wrap: break-word !important;
 }
-
 
 .deletemodel-panelgrid {
-	text-align:center;
-	margin:10px;
+	text-align: center;
+	margin: 10px;
 }
 
-.deletemodel-panelgrid .ui-widget-content, 
-	.deletemodel-panelgrid .ui-panelgrid-cell {
-	border: none!important;
-	border-width:0!important;
+.deletemodel-panelgrid .ui-widget-content, .deletemodel-panelgrid .ui-panelgrid-cell
+	{
+	border: none !important;
+	border-width: 0 !important;
 }
 
 .align-top td {
-	vertical-align:top;
+	vertical-align: top;
 }
-
 
 .search-autocomplete .ui-inputfield {
-	width: 200px!important;
+	width: 200px !important;
 }
 
-.search-autocomplete .ui-selectcheckboxmenu .ui-selectcheckboxmenu-label {
+.search-autocomplete .ui-selectcheckboxmenu .ui-selectcheckboxmenu-label
+	{
 	padding: 3px 2px 3px 5px;
+}
+
+.gridComponentsAlignTop {
+    vertical-align: top;
+}
+.manageTemplateLabel
+{
+	color:gray;
+	font-size: 14px;
+}
+
+.manageTemplateValue
+{
+	font-size:15px;
 }
