added joinQuery converter to handle select a.* case
- use JsqlParser to parse joined query and handle a.*, b.* query
(converted to full qualified select items )
- refactor out common code in JdbcClientImpl on extracting query column
label
- added a new joinQuery attribute for storing user input joinQuery,
existing value attribute will be used as final query for model
(attribute mapping generation usage)
- change JSF backing bean for model wizard to point to joinQuery
attribute instead of value attribute

--- a/report-web/src/main/webapp/views/model/model_wizard.xhtml
+++ b/report-web/src/main/webapp/views/model/model_wizard.xhtml
@@ -106,7 +106,7 @@
 
 									<p:inputTextarea id="query"
 										placeholder="Use #{modelWizard.model.datasource.schema};"
-										value="#{modelWizard.model.query.value}" autoResize="false"
+										value="#{modelWizard.model.query.joinQuery}" autoResize="false"
 										style="width:100%;height:200px" required="true" label="Query">
 										<p:ajax event="change"
 											listener="#{modelWizard.onChangeTxtAreaQuery}"
